@@ -21,6 +21,7 @@ package com.arcadedb.database;
 import com.arcadedb.ContextConfiguration;
 import com.arcadedb.GlobalConfiguration;
 import com.arcadedb.Profiler;
+import com.arcadedb.database.Record;
 import com.arcadedb.database.async.DatabaseAsyncExecutor;
 import com.arcadedb.database.async.DatabaseAsyncExecutorImpl;
 import com.arcadedb.database.async.ErrorCallback;
@@ -81,7 +82,8 @@ import com.arcadedb.utility.RWLockContext;
 
 import java.io.*;
 import java.nio.channels.*;
-import java.nio.file.*;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.*;
 import java.util.concurrent.*;
 import java.util.concurrent.atomic.*;
@@ -874,14 +876,14 @@ public class LocalDatabase extends RWLockContext implements DatabaseInternal {
     if (mode == ComponentFile.MODE.READ_ONLY)
       throw new DatabaseIsReadOnlyException("Cannot update a record");
 
-    if (record instanceof MutableDocument)
-      ((MutableDocument) record).validate();
+    if (record instanceof MutableDocument document)
+      document.validate();
 
     // INVOKE EVENT CALLBACKS
     if (!events.onBeforeUpdate(record))
       return;
-    if (record instanceof Document)
-      if (!((RecordEventsRegistry) ((Document) record).getType().getEvents()).onBeforeUpdate(record))
+    if (record instanceof Document document)
+      if (!((RecordEventsRegistry) document.getType().getEvents()).onBeforeUpdate(record))
         return;
 
     executeInReadLock(() -> {
@@ -892,13 +894,13 @@ public class LocalDatabase extends RWLockContext implements DatabaseInternal {
         try {
           getTransaction().addUpdatedRecord(record);
 
-          if (record instanceof Document) {
+          if (record instanceof Document document) {
             // UPDATE THE INDEX IN MEMORY BEFORE UPDATING THE PAGE
-            final List<IndexInternal> indexes = indexer.getInvolvedIndexes((Document) record);
+            final List<IndexInternal> indexes = indexer.getInvolvedIndexes(document);
             if (!indexes.isEmpty()) {
               // UPDATE THE INDEXES TOO
               final Document originalRecord = getOriginalDocument(record);
-              indexer.updateDocument(originalRecord, (Document) record, indexes);
+              indexer.updateDocument(originalRecord, document, indexes);
             }
           }
         } catch (final IOException e) {
@@ -909,8 +911,8 @@ public class LocalDatabase extends RWLockContext implements DatabaseInternal {
 
       // INVOKE EVENT CALLBACKS
       events.onAfterUpdate(record);
-      if (record instanceof Document)
-        ((RecordEventsRegistry) ((Document) record).getType().getEvents()).onAfterUpdate(record);
+      if (record instanceof Document document)
+        ((RecordEventsRegistry) document.getType().getEvents()).onAfterUpdate(record);
 
       return null;
     });
@@ -932,8 +934,8 @@ public class LocalDatabase extends RWLockContext implements DatabaseInternal {
     final boolean implicitTransaction = checkTransactionIsActive(autoTransaction);
 
     try {
-      final List<IndexInternal> indexes = record instanceof Document ?
-          indexer.getInvolvedIndexes((Document) record) :
+      final List<IndexInternal> indexes = record instanceof Document d ?
+          indexer.getInvolvedIndexes(d) :
           Collections.emptyList();
 
       if (!indexes.isEmpty()) {
@@ -981,8 +983,8 @@ public class LocalDatabase extends RWLockContext implements DatabaseInternal {
     // INVOKE EVENT CALLBACKS
     if (!events.onBeforeDelete(record))
       return;
-    if (record instanceof Document)
-      if (!((RecordEventsRegistry) ((Document) record).getType().getEvents()).onBeforeDelete(record))
+    if (record instanceof Document document)
+      if (!((RecordEventsRegistry) document.getType().getEvents()).onBeforeDelete(record))
         return;
 
     boolean success = false;
@@ -991,11 +993,11 @@ public class LocalDatabase extends RWLockContext implements DatabaseInternal {
     try {
       final LocalBucket bucket = schema.getBucketById(record.getIdentity().getBucketId());
 
-      if (record instanceof Document)
-        indexer.deleteDocument((Document) record);
+      if (record instanceof Document document)
+        indexer.deleteDocument(document);
 
-      if (record instanceof Edge) {
-        graphEngine.deleteEdge((Edge) record);
+      if (record instanceof Edge edge) {
+        graphEngine.deleteEdge(edge);
       } else if (record instanceof Vertex) {
         graphEngine.deleteVertex((VertexInternal) record);
       } else
@@ -1005,8 +1007,8 @@ public class LocalDatabase extends RWLockContext implements DatabaseInternal {
 
       // INVOKE EVENT CALLBACKS
       events.onAfterDelete(record);
-      if (record instanceof Document)
-        ((RecordEventsRegistry) ((Document) record).getType().getEvents()).onAfterDelete(record);
+      if (record instanceof Document document)
+        ((RecordEventsRegistry) document.getType().getEvents()).onAfterDelete(record);
 
       final TransactionContext transaction = getTransaction();
       transaction.updateBucketRecordDelta(bucket.getFileId(), -1);
@@ -1600,8 +1602,8 @@ public class LocalDatabase extends RWLockContext implements DatabaseInternal {
     record = events.onAfterRead(record);
     if (record == null)
       return null;
-    if (record instanceof Document) {
-      final DocumentType type = ((Document) record).getType();
+    if (record instanceof Document document) {
+      final DocumentType type = document.getType();
       if (type != null) {
 //        System.out.println("invokeAfterReadEvents for type = pre");
 
@@ -1729,7 +1731,7 @@ public class LocalDatabase extends RWLockContext implements DatabaseInternal {
           if (lockFileIO != null)
             lockFileIO.close();
           if (lockFile.exists())
-            Files.delete(Paths.get(lockFile.getAbsolutePath()));
+            Files.delete(Path.of(lockFile.getAbsolutePath()));
 
           if (lockFile.exists() && !lockFile.delete())
             LogManager.instance().log(this, Level.WARNING, "Error on deleting lock file '%s'", lockFile);
@@ -1816,8 +1818,8 @@ public class LocalDatabase extends RWLockContext implements DatabaseInternal {
     } catch (final Exception e) {
       open = false;
 
-      if (e instanceof DatabaseOperationException)
-        throw (DatabaseOperationException) e;
+      if (e instanceof DatabaseOperationException exception)
+        throw exception;
 
       throw new DatabaseOperationException("Error on creating new database instance", e);
     }
