@@ -26,12 +26,7 @@ import com.arcadedb.query.sql.executor.MultiValue;
 import com.arcadedb.query.sql.executor.Result;
 import com.arcadedb.query.sql.executor.ResultInternal;
 
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.Iterator;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 public class ContainsAllCondition extends BooleanExpression {
   protected Expression left;
@@ -44,11 +39,11 @@ public class ContainsAllCondition extends BooleanExpression {
 
   public boolean execute(Object left, Object right) {
     if (left instanceof Collection) {
-      if (right instanceof Collection)
-        return ((Collection<?>) left).containsAll((Collection<?>) right);
+      if (right instanceof Collection<?> collection)
+        return ((Collection<?>) left).containsAll(collection);
 
-      if (right instanceof Iterable)
-        right = ((Iterable<?>) right).iterator();
+      if (right instanceof Iterable<?> iterable)
+        right = iterable.iterator();
 
       if (right instanceof Iterator<?> iterator) {
         while (iterator.hasNext()) {
@@ -60,12 +55,12 @@ public class ContainsAllCondition extends BooleanExpression {
       }
       return ((Collection) left).contains(right);
     }
-    if (left instanceof Iterable)
-      left = ((Iterable<?>) left).iterator();
+    if (left instanceof Iterable<?> iterable)
+      left = iterable.iterator();
 
     if (left instanceof Iterator<?> leftIterator) {
       if (!(right instanceof Iterable))
-        right = Collections.singleton(right);
+        right = Set.of(right);
 
       right = ((Iterable<?>) right).iterator();
 
@@ -101,12 +96,12 @@ public class ContainsAllCondition extends BooleanExpression {
       final Iterator<?> iter = MultiValue.getMultiValueIterator(leftValue);
       while (iter.hasNext()) {
         final Object item = iter.next();
-        if (item instanceof Identifiable) {
-          if (!rightBlock.evaluate((Identifiable) item, context))
+        if (item instanceof Identifiable identifiable) {
+          if (!rightBlock.evaluate(identifiable, context))
             return false;
 
-        } else if (item instanceof Result) {
-          if (!rightBlock.evaluate((Result) item, context))
+        } else if (item instanceof Result result) {
+          if (!rightBlock.evaluate(result, context))
             return false;
 
         } else if (!rightBlock.evaluate(new ResultInternal(item), context))
@@ -130,11 +125,11 @@ public class ContainsAllCondition extends BooleanExpression {
       final Iterator<?> iter = MultiValue.getMultiValueIterator(leftValue);
       while (iter.hasNext()) {
         final Object item = iter.next();
-        if (item instanceof Identifiable) {
-          if (!rightBlock.evaluate((Identifiable) item, context))
+        if (item instanceof Identifiable identifiable) {
+          if (!rightBlock.evaluate(identifiable, context))
             return false;
-        } else if (item instanceof Result) {
-          if (!rightBlock.evaluate((Result) item, context))
+        } else if (item instanceof Result result) {
+          if (!rightBlock.evaluate(result, context))
             return false;
         } else if (!rightBlock.evaluate(new ResultInternal(item), context))
           return false;
