@@ -28,12 +28,7 @@ import com.arcadedb.query.sql.executor.QueryOperatorEquals;
 import com.arcadedb.query.sql.executor.Result;
 import com.arcadedb.query.sql.executor.ResultInternal;
 
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.Iterator;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 public class ContainsCondition extends BooleanExpression {
 
@@ -93,7 +88,7 @@ public class ContainsCondition extends BooleanExpression {
 
     if (leftIterator != null) {
       if (!(right instanceof Iterable))
-        right = Collections.singleton(right);
+        right = Set.of(right);
 
       right = ((Iterable<?>) right).iterator();
 
