@@ -29,8 +29,9 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 import java.io.*;
-import java.nio.file.*;
-import java.util.*;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.util.List;
 import java.util.concurrent.*;
 
 import static java.util.concurrent.TimeUnit.*;
@@ -49,7 +50,7 @@ public class ServerSecurityIT {
     security.startService();
     security.loadUsers();
 
-    final Path securityConfPath = Paths.get("./target", SecurityUserFileRepository.FILE_NAME);
+    final Path securityConfPath = Path.of("./target", SecurityUserFileRepository.FILE_NAME);
     final File securityConf = securityConfPath.toFile();
 
     assertThat(securityConf.exists()).isTrue();
@@ -65,7 +66,7 @@ public class ServerSecurityIT {
 
   @Test
   void shouldCreateDefaultRootUserAndPersistsSecurityConfigurationFromUserInput() throws IOException {
-    final Path securityConfPath = Paths.get("./target", SecurityUserFileRepository.FILE_NAME);
+    final Path securityConfPath = Path.of("./target", SecurityUserFileRepository.FILE_NAME);
     Files.deleteIfExists(securityConfPath);
 
     GlobalConfiguration.SERVER_ROOT_PASSWORD.setValue(null);
@@ -105,7 +106,7 @@ public class ServerSecurityIT {
     final JSONObject json = new JSONObject().put("name", "providedUser").put("password", security.encodePassword("MyPassword12345"))
         .put("databases", new JSONObject());
 
-    repository.save(Collections.singletonList(json));
+    repository.save(List.of(json));
 
     //when
     security.startService();
@@ -130,7 +131,7 @@ public class ServerSecurityIT {
     final JSONObject json = new JSONObject().put("name", "providedUser").put("password", security.encodePassword("MyPassword12345"))
         .put("databases", new JSONObject().put("dbtest", new JSONObject()));
 
-    repository.save(Collections.singletonList(json));
+    repository.save(List.of(json));
 
     //when
     security.startService();
